# proxysql-binlog-reader

./: Cargo.toml
src/: main.rs
