[package]
name = "proxysql-binlog-reader"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "*", default-features = false, features = [ ] }
flate2 = { version = "*", default-features = false, features = ["zlib"] }
mysql_common = { version = "*", default-features = false, features = []} #"bigdecimal03", "time03", "uuid"]}
popol = "*"
