[package]
name = "proxysql-binlog-reader"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "25", default-features = false, features = ["minimal", "binlog"] }
popol = "1"
uuid = "1"
byteorder = "1"

[profile.release]
lto = true
